[gd_scene load_steps=10 format=3 uid="uid://cvkgrcljhxs0s"]

[ext_resource type="Script" path="res://scenes/ui/mainMenu.gd" id="1_a7jkm"]
[ext_resource type="Theme" uid="uid://cj37hx64v4578" path="res://assets/materialsThemes/menu.tres" id="1_j2jlu"]
[ext_resource type="Texture2D" uid="uid://chpbdqlig4aax" path="res://assets/images/menu/title.png" id="2_djqdx"]
[ext_resource type="Texture2D" uid="uid://c4n3qxjfxtj4p" path="res://assets/images/menu/cover.png" id="2_ixxa4"]

[sub_resource type="Animation" id="Animation_m0f3m"]
resource_name = "playHover"
length = 0.4
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("H/1/Play:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 38, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.4)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("H/1/Play:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(264, -0.25, 0, 0.25, 0, 264, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.4)
}

[sub_resource type="Animation" id="Animation_soefv"]
resource_name = "settingsHover"
length = 0.4
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("H/1/Settings:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 38, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.4)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("H/1/Settings:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(308, -0.25, 0, 0.25, 0, 308, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.4)
}

[sub_resource type="Animation" id="Animation_rnuwn"]
resource_name = "quitHover"
length = 0.4
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("H/1/Quit:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 38, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.4)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("H/1/Quit:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(352, -0.25, 0, 0.25, 0, 352, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.4)
}

[sub_resource type="Animation" id="Animation_rs0wi"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("H/1/Play:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("H/1/Play:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(264, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("H/1/Settings:position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("H/1/Settings:position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(308, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("H/1/Quit:position:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("H/1/Quit:position:y")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(352, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8ors7"]
_data = {
"RESET": SubResource("Animation_rs0wi"),
"playHover": SubResource("Animation_m0f3m"),
"quitHover": SubResource("Animation_rnuwn"),
"settingsHover": SubResource("Animation_soefv")
}

[node name="MainMenu" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_j2jlu")
script = ExtResource("1_a7jkm")

[node name="Cover" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("2_ixxa4")

[node name="H" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="1" type="VBoxContainer" parent="H"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="Title" type="TextureRect" parent="H/1"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_djqdx")
stretch_mode = 2

[node name="Play" type="Button" parent="H/1"]
texture_filter = 2
layout_mode = 2
text = "PLAY"

[node name="Settings" type="Button" parent="H/1"]
layout_mode = 2
text = "SETTINGS"

[node name="Quit" type="Button" parent="H/1"]
layout_mode = 2
text = "QUIT"

[node name="Credit" type="Label" parent="H/1"]
layout_mode = 2
size_flags_vertical = 10
theme_override_font_sizes/font_size = 10
text = " Rian Young, Nerve Centre GDA 2025"

[node name="2" type="VBoxContainer" parent="H"]
layout_mode = 2
size_flags_horizontal = 3

[node name="3" type="VBoxContainer" parent="H"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8ors7")
}

[connection signal="mouse_entered" from="H/1/Play" to="." method="_on_play_mouse_entered"]
[connection signal="mouse_exited" from="H/1/Play" to="." method="_on_play_mouse_exited"]
[connection signal="pressed" from="H/1/Play" to="." method="_on_play_pressed"]
[connection signal="mouse_entered" from="H/1/Settings" to="." method="_on_settings_mouse_entered"]
[connection signal="mouse_exited" from="H/1/Settings" to="." method="_on_settings_mouse_exited"]
[connection signal="pressed" from="H/1/Settings" to="." method="_on_settings_pressed"]
[connection signal="mouse_entered" from="H/1/Quit" to="." method="_on_quit_mouse_entered"]
[connection signal="mouse_exited" from="H/1/Quit" to="." method="_on_quit_mouse_exited"]
[connection signal="pressed" from="H/1/Quit" to="." method="_on_quit_pressed"]
